<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activity.DescriptionActivity"
    android:background="#ffffff">
    
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:id="@+id/llContent"
                android:weightSum="6"
                android:background="#ffffff"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgBookImage"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:src="@mipmap/ic_launcher"
                    android:scaleType="centerCrop"
                    android:padding="5dp"/>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3.3">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtBookName"
                        android:text="Name of the book"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:padding="8dp"
                        android:textColor="#000000"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtBookAuthor"
                        android:text="Name of the Author"
                        android:textSize="15sp"
                        android:padding="8dp"
                        android:textColor="#000000"
                        android:layout_below="@+id/txtBookName"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtBookPrice"
                        android:text="Rs. 299"
                        android:textSize="15sp"
                        android:padding="8dp"
                        android:textStyle="bold"
                        android:textColor="#357a38"
                        android:layout_below="@+id/txtBookAuthor"/>

                </RelativeLayout>

                <TextView
                    android:id="@+id/txtBookRating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:text="4.2"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="#ffc828"
                    android:padding="4dp"
                    android:drawableLeft="@drawable/ic_rating"
                    android:drawablePadding="4dp"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/llContent">

                <TextView
                    android:id="@+id/txtAboutTheBookStatic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/about_the_book"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="4dp"
                    android:padding="6dp"/>

                <TextView
                    android:id="@+id/txtBookDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtAboutTheBookStatic"
                    android:padding="6dp"
                    android:layout_margin="10dp"
                    android:text="@string/hello_blank_fragment"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="#000000"/>

            </RelativeLayout>

        </RelativeLayout>


    </ScrollView>

    <Button
        android:id="@+id/btnAddToFav"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="@string/add_to_favourites"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#ffffff"/>


    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

</RelativeLayout>
